Cross reference recipes in collation notes

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -71,204 +71,201 @@
 
 \vspace{1\baselineskip}%
 
-二、七、八……全书各篇，“滗”。《四》本《八》本作“泌”。径改。“滗”，滤。
+\recipelist{2,7,8}……全书各篇，“滗”。《四》本《八》本作“泌”。径改。“滗”，滤。
 
-四、二四、七一……全书各篇，“搛”。《四》本《八》本作“扦”。径改。“搛”，（用筷子）
-夹。
+\recipelist{4,24,71}……全书各篇，“搛”。《四》本《八》本作“扦”。径改。“搛”，（用
+筷子）夹。
 
-六、锅巴肉片。“锅巴”，《四》本《八》本作“锅粑”。据《中》本改。
+\reciperef{6}。“锅巴”，《四》本《八》本作“锅粑”。据《中》本改。
 
-七、水煮肉片。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
+\reciperef{7}。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
 
-八、一一、一六……全书各篇，“醪糟”，各本皆作“𰪿糟”。径改。“𰪿”系“𫃑”之类推简化
-字。
+\recipelist{8,11,16}……全书各篇，“醪糟”，各本皆作“𰪿糟”。径改。“𰪿”系“𫃑”之类推
+简化字。
 
-九、芙蓉肉片。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》
-本改。
-
-一七、大南瓜蒸肉。“瓤”，各本皆作“穰”。径改。
-
-一八、一九，“尖刀圆子”。《四》本《八》本《七》本作“尖刀元子”。《中》本作“尖刀
-丸子”。径改。
-
-一八、二七九，“汆”。《四》本《八》本作“川”。径改。
-
-一九、二〇、五六、一九五、二五四所附共十一副插图。《四》本《八》本插图，线条边
-缘参差不齐模糊不清。据《中》本插图重制。
-
-二一、八四、一七五、二二七、二四八，“棋子块”。《四》本《八》本作“旗子块”。径
+\reciperef{9}。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》本
 改。
 
-二二、三三，“肉圆”。《四》本《八》本作“肉元”。径改。
+\reciperef{17}。“瓤”，各本皆作“穰”。径改。
 
-二四、四八、五五……全书各篇，“口蘑”。《四》本《八》本作“口茉”。据《中》本《重》
-本改。
+\recipelist{18,19}，“尖刀圆子”。《四》本《八》本《七》本作“尖刀元子”。《中》本
+作“尖刀丸子”。径改。
 
-二八、二九、三三、一六三、二〇五、二〇六、二〇八、二五八、二七一，“圆”。《四》
-本《八》本作“元”。径改。
+\recipelist{18,279}，“汆”。《四》本《八》本作“川”。径改。
 
-二九、三十、三一、三二、九六、一七七、一七九、二六五、二六九、二九三、二九五、
-三一〇、三一一，“铝锅”。各本皆作“锑锅”。径改。
+\recipelist{19,20,56,195,254}所附共十一副插图。《四》本《八》本插图，线条边缘
+参差不齐模糊不清。据《中》本插图重制。
 
-三〇、芝麻肘子。“捡去泡沫”，《四》本《八》本作“检去泡沫”。径改。“杆杖”，《四》
+\recipelist{21,84,175,227,248}，“棋子块”。《四》本《八》本作“旗子块”。径改。
+
+\recipelist{22,33}，“肉圆”。《四》本《八》本作“肉元”。径改。
+
+\recipelist{24,48,55}……全书各篇，“口蘑”。《四》本《八》本作“口茉”。据《中》本
+《重》本改。
+
+\recipelist{28,29,33,163,205,206,208,258,271}，“圆”。《四》本《八》本作“元”。
+径改。
+
+\recipelist{29,30,31,32,96,177,179,265,269,293,295,310,311}，“铝锅”。各本皆作
+“锑锅”。径改。
+
+\reciperef{30}。“捡去泡沫”，《四》本《八》本作“检去泡沫”。径改。“杆杖”，《四》
 本《八》本作“杆仗”。径改。
 
-三三、三四、一四七、一八八、一九一，“圆子”。《四》本《八》本作“元子”。径改。
+\recipelist{33,34,147,188,191}，“圆子”。《四》本《八》本作“元子”。径改。
 
-三四、四二、六八、八八、八九、九三、九七、一一七、一二七、一五一、一五四、一六
-〇、一六三、二〇〇、二〇二、二〇六、二三七、二四〇、二五〇，“慈姑”。《四》本
-《八》本作“慈菇”。径改。“慈姑”，亦作茨菰。
+\recipelist{34,42,68,88,89,93,97,117,127,151,154,160,163,200,202,206,237,240,%
+250}，“慈姑”。《四》本《八》本作“慈菇”。径改。“慈姑”，亦作茨菰。
 
-三七、炸扳指。“扳指”，《四》本《八》本作“斑指”，《中》本《七》本作“班指”。径
+\reciperef{37}。“扳指”，《四》本《八》本作“斑指”，《中》本《七》本作“班指”。径
 改。“……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
 
-三九、四八、四九，“擀”。《四》本作“扞”。据《八》本改。
+\recipelist{39,48,49}，“擀”。《四》本作“扞”。据《八》本改。
 
-四〇、锅贴腰片。“磉磴”。
+\reciperef{40}。“磉磴”。
 “磉”，{s\v{a}ng}{ㄙ\kern-.333333emㄤ\kern-.75em\raise.5ex\hbox{\v{}}\kern.25em}
 柱下石。
 “磴”，{d\`{e}ng}{ㄉ\kern-.333333emㄥ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}
 石阶。
 
-四一、四二、七一、一二一、二五七，“𠟤”。疑误。
+\recipelist{41,42,71,121,257}，“𠟤”。疑误。
 
-四一、二六五、二七〇，“臊”。《四》本《八》本作“骚”。径改。
+\recipelist{41,265,270}，“臊”。《四》本《八》本作“骚”。径改。
 
-四四、四九、八七、一〇六、一一七、二〇六、二四八，“烂”。《四》本《八》本作
-“滥”。径改。
+\recipelist{44,49,87,106,117,206,248}，“烂”。《四》本《八》本作“滥”。径改。
 
-四八、菠饺白肺。“水龙头”，《四》本《八》本作“水笼头”。径改。
+\reciperef{48}。“水龙头”，《四》本《八》本作“水笼头”。径改。
 
-五〇、七九、八五……全书各篇，“番茄”。各本皆作“蕃茄”。径改。
+\recipelist{50,79,85}……全书各篇，“番茄”。各本皆作“蕃茄”。径改。
 
-五二、六三、一四九、二五四，“劖”。《八》本作
+\recipelist{52,63,149,254}，“劖”。《八》本作
 “{\bfseries\raise.19em\hbox{\scalebox{.675}[.75]{免}}\kern-.675em%
 \lower.215em\hbox{\scalebox{.95}[.55]{⺀}}\kern-.405616em%
 \scalebox{.65}[1]{刂}}”，系已弃用之类推简化字。
 
-五五、罈子肉。《八》本目录中作“罐子肉”。误。《中》本目录中作“坛子肉”，内页
+\reciperef{55}。《八》本目录中作“罐子肉”。误。《中》本目录中作“坛子肉”，内页
 中作“罎子肉”。
 
-五五、六九、一五三，“须”。《四》本作“鬚”。据《八》本改。
+\recipelist{55,69,153}，“须”。《四》本作“鬚”。据《八》本改。
 
-五五、一八六、一八八……全书各篇，“珧柱”。《四》本《八》本作“𧎼蛀”。《中》本作
-“𧎼柱”。径改。
+\recipelist{55,186,188}……全书各篇，“珧柱”。《四》本《八》本作“𧎼蛀”。《中》本
+作“𧎼柱”。径改。
 
-五六、烤酥方。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本皆
-作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
+\reciperef{56}。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本
+皆作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
 《中》本改。
 
-六三、辣子鸡丁。各本皆作“劖（音沾……）”。误。据《康熙字典》，“劖”，锄衔切，
+\reciperef{63}。各本皆作“劖（音沾……）”。误。据《康熙字典》，“劖”，锄衔切，
 {ch\'{a}n}{ㄔ\kern-.333333emㄢ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}。
 
-六七、六八、八二、九二、一一八、一二七、一五〇、二五五、二八〇、三〇一，“熘”。
-《四》本《八》本作“溜”。径改。
+\recipelist{67,68,82,92,118,127,150,255,280,301}，“熘”。《四》本《八》本作
+“溜”。径改。
 
-七三、旱蒸全鸡。“箅子”，《四》本作“篦子”，《八》本作“篾子”。径改。
+\reciperef{73}。“箅子”，《四》本作“篦子”，《八》本作“篾子”。径改。
 
-七四、三菌炖鸡。脚注{\footnotesize\circled{1}}中“……盛产于成都近郊。”《中》本作
+\reciperef{74}。脚注{\footnotesize\circled{1}}中“……盛产于成都近郊。”《中》本作
 “……盛产于成都附近山崖中。”“三菌”，鸡𭎂（㙡）{z\={o}ng}%
 {ㄗ\kern-.333333emㄨ\kern-.333333emㄥ}菌。
 
-八一、雪花鸡淖。“淖”，
+\reciperef{81}。“淖”，
 {n\`{a}o}{ㄋ\kern-.333333emㄠ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em} 泥也。
 
-八七、牡丹鸡片。“擀”，《四》本作“扞”，《八》本作“撖”。径改。
+\reciperef{87}。“擀”，《四》本作“扞”，《八》本作“撖”。径改。
 
-九四、五彩鸡片。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}{ㄎ\kern-.25emㄚ}
+\reciperef{94}。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}{ㄎ\kern-.25emㄚ}
 （紧）夹，扎，刺。
 
-九五、刷把鸡丝。《八》本标题作“刷把鸡丝（汤）”。“上笼汽三分钟”。“汽”，《八》
-本作“气”。误。
+\reciperef{95}。《八》本标题作“刷把鸡丝（汤）”。“上笼汽三分钟”。“汽”，《八》本
+作“气”。误。
 
-一〇〇、泥糊鸡。“𫃕”，{c\'{i}}{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}
+\reciperef{100}。“𫃕”，{c\'{i}}{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}
 粘稠。
 
-一〇一、包烧鸡。“鸡翘”，鸡屁股。
+\reciperef{101}。“鸡翘”，鸡屁股。
 
-一〇二、魔芋烧鸭。“魔芋”，《四》本《八》本作“茉芋”。径改。
+\reciperef{102}。“魔芋”，《四》本《八》本作“茉芋”。径改。
 
-一〇六、银杏鸭脯。“锅内掺清汤”。“掺”，《四》本《八》本作“渗”。径改。
+\reciperef{106}。“锅内掺清汤”。“掺”，《四》本《八》本作“渗”。径改。
 
-一二〇、一二一、一二三、二二三、二五七、二六二，“𬂁”。“肫”之异体字。鸟类的胃。
+\recipelist{120,121,123,223,257,262}，“𬂁”。“肫”之异体字。鸟类的胃。
 
-一二〇、一二九、一三〇……全书各篇，“鳃”。各本皆作“腮”。径改。
+\recipelist{120,129,130}……全书各篇，“鳃”。各本皆作“腮”。径改。
 
-一二一、汆双脆。《四》本《八》本标题作“川双脆”。径改。
+\reciperef{121}。《四》本《八》本标题作“川双脆”。径改。
 
-一四二、红烧甲鱼。“甲鱼”，《四》本《八》本全篇皆作“足鱼”。据《中》本《七》本
+\reciperef{142}。“甲鱼”，《四》本《八》本全篇皆作“足鱼”。据《中》本《七》本
 改。“肉𤆵可口”，《中》本作“肉烂可口”。“但须注意甲鱼肉不可与苋菜同食”。“甲鱼
 肉”，《中》本作“龟鳖肉”。
 
-一四三、黄焖大鲢鱼头。《四》本《八》本中脚注标记{\footnotesize\circled{1}}在
-“原料”段落中“鲢鱼头一个约四、五斤”之后。据《中》本改至标题之后。“竹篾箅”，
-《四》本《八》本作“竹篾篦”。据《中》本改。“即用筷子将鱼肉轻轻拨下”，《四》本
-《八》本作“……轻轻试一下”。据《中》本改。脚注{\footnotesize\circled{1}}中“而不
-是一般池塘养的鲢鱼”，《四》本《八》本无此句。据《中》本补。之后“但四川人……”，
-《四》本《八》本无“但”字。据《中》本补。脚注{\footnotesize\circled{1}}中“身圆
-口大”，《四》本《八》本作“身团口大”。据《中》本改。
+\reciperef{143}。《四》本《八》本中脚注标记{\footnotesize\circled{1}}在“原料”
+段落中“鲢鱼头一个约四、五斤”之后。据《中》本改至标题之后。“竹篾箅”，《四》本
+《八》本作“竹篾篦”。据《中》本改。“即用筷子将鱼肉轻轻拨下”，《四》本《八》本作
+“……轻轻试一下”。据《中》本改。脚注{\footnotesize\circled{1}}中“而不是一般池塘
+养的鲢鱼”，《四》本《八》本无此句。据《中》本补。之后“但四川人……”，《四》本
+《八》本无“但”字。据《中》本补。脚注{\footnotesize\circled{1}}中“身圆口大”，
+《四》本《八》本作“身团口大”。据《中》本改。
 
-一四四、五柳鱼。“酱油、白糖、醋、味精、水豆粉、料酒、清汤先兑成滋汁一碗。”“白
+\reciperef{144}。“酱油、白糖、醋、味精、水豆粉、料酒、清汤先兑成滋汁一碗。”“白
 糖”，《八》本作“冰糖”。
 
-一四七、一五〇，“鱼圆”。《四》本《八》本作“鱼元”。径改。
+\recipelist{147,150}，“鱼圆”。《四》本《八》本作“鱼元”。径改。
 
-一四八、椒盐鱼卷。“咖喱”，《四》本《八》本作“咖哩”。径改。
+\reciperef{148}。“咖喱”，《四》本《八》本作“咖哩”。径改。
 
-一五七、一七三、一七八、一八二、一八三、一八四、一八五、一九三、二六三，“煨”。
-《四》本《八》本作“喂”。径改。
+\recipelist{157,173,178,182,183,184,185,193,263}，“煨”。《四》本《八》本作
+“喂”。径改。
 
-一六三、五色虾球。“鲜虾仁”，《四》本《八》本“鲜”前衍一“尽”字。径删。
+\reciperef{163}。“鲜虾仁”，《四》本《八》本“鲜”前衍一“尽”字。径删。
 
-一六九、佛手蜇卷。“蜇”，《八》本作“蛰”。误。
+\reciperef{169}。“蜇”，《八》本作“蛰”。误。
 
-一八三、菠饺鱼肚。“擀”，《四》本《八》本作“扞”。径改。
+\reciperef{183}。“擀”，《四》本《八》本作“扞”。径改。
 
-一九四、佛手海参。“白铝盘”，《四》本《八》本作“白锑盘”。径改。
+\reciperef{194}。“白铝盘”，《四》本《八》本作“白锑盘”。径改。
 
-二〇二、二〇四，“红苕”。亦称番薯、红薯、甘薯。
+\recipelist{202,204}，“红苕”。亦称番薯、红薯、甘薯。
 
-二〇四、蜜汁苕蛋。“青糖”，《四》本《八》本作“清糖”，径改。“青糖”，粗制赤（红）
+\reciperef{204}。“青糖”，《四》本《八》本作“清糖”，径改。“青糖”，粗制赤（红）
 糖。
 
-二〇四、二〇七，“橘红”。《四》本《八》本作“桔红”。径改。
+\recipelist{204,207}，“橘红”。《四》本《八》本作“桔红”。径改。
 
-二〇五、糯米圆子。“圆子”，《四》本《八》本《中》本作“元子”。径改。“入沸水潦过
+\reciperef{205}。“圆子”，《四》本《八》本《中》本作“元子”。径改。“入沸水潦过
 心”。“潦”，用开水略煮。
 
-二〇七、八宝酿藕。“百合”，《四》本《八》本作“白合”。径改。
+\reciperef{207}。“百合”，《四》本《八》本作“白合”。径改。
 
-二一二、盐白菜冬笋。“大拇指”，《四》本《八》本作“大姆指”。据《中》本改。
+\reciperef{212}。“大拇指”，《四》本《八》本作“大姆指”。据《中》本改。
 
-二二三、二六一，“什锦”。《四》本《八》本作“什景”。径改。
+\recipelist{223,261}，“什锦”。《四》本《八》本作“什景”。径改。
 
-二二八、格花豆腐皮。“四张豆腐皮一叠，如果再重四张，共为两叠。”“叠”，《四》本
-《八》本作“迭”。径改。
+\reciperef{228}。“四张豆腐皮一叠，如果再重四张，共为两叠。”“叠”，《四》本《八》
+本作“迭”。径改。
 
-二三三、清汤白菜。《四》本“八分火”之后无脚注标记{\footnotesize\circled{1}}。据
+\reciperef{233}。《四》本“八分火”之后无脚注标记{\footnotesize\circled{1}}。据
 《八》本《中》本补。
 
-二四五、酸辣虾羹汤。“盐六分”，《四》本《八》本作“盐一分”。据《中》本改。《四》
-本《八》本无脚注{\footnotesize\circled{1}\circled{2}\circled{3}\circled{4}}。
-据《中》本补。
+\reciperef{245}。“盐六分”，《四》本《八》本作“盐一分”。据《中》本改。《四》本
+《八》本无脚注{\footnotesize\circled{1}\circled{2}\circled{3}\circled{4}}。据
+《中》本补。
 
-二五三、子母烩。《中》本标题作“子母会”。“因鸽子与鸽蛋同配一菜，故名子母会
+\reciperef{253}。《中》本标题作“子母会”。“因鸽子与鸽蛋同配一菜，故名子母会
 （烩）。”《四》本《八》本括号部分在句号后面。《中》本无括号部分内容。据《标点
 符号用法》\textsc{gb/t 15834--2011}，将括号部分移至句号之前。
 
-二六四、酿两样。“抽去……扦子骨……入抽去扦子骨处”。“扦”，~《四》本作“杄”，《八》
+\reciperef{264}。“抽去……扦子骨……入抽去扦子骨处”。“扦”，~《四》本作“杄”，《八》
 本作“{\bfseries\scalebox{.65}[1]{林}\kern-.12em\scalebox{.55}[1]{千}}”。径改。
 
-二六七、炸扳指。“扳指”，《四》本《八》本《重》本作“斑指”。径改。“……以防炸糊。”
+\reciperef{267}。“扳指”，《四》本《八》本《重》本作“斑指”。径改。“……以防炸糊。”
 “糊”，《四》本《八》本《重》本皆作“胡”。径改。
 
-二六七、三〇八，“汆一道”。《四》本《八》本作“川一道”。径改。
+\recipelist{267,308}，“汆一道”。《四》本《八》本作“川一道”。径改。
 
-二六九、清汤竹荪肝膏。“竹荪”，《四》本《八》本《重》本皆作“竹参”。径改。
+\reciperef{269}。“竹荪”，《四》本《八》本《重》本皆作“竹参”。径改。
 
-二七三、旱蒸鱼。各本标题皆作“汗蒸鱼”。径改。
+\reciperef{273}。各本标题皆作“汗蒸鱼”。径改。
 
-二九二、奶汤素烩。“莴笋”，《四》本《八》本作“窝笋”。径改。
+\reciperef{292}。“莴笋”，《四》本《八》本作“窝笋”。径改。
 
 \end{list}
 \endgroup%
