--- a/latex/recipe-265.tex
+++ b/latex/recipe-265.tex
@@ -33,7 +33,7 @@
 
 \ingredient{水牛脑顶肉（不宜用黄牛）}{六斤}
 \ingredient{冰糖色}{七钱}
-\ingredient{母鸡汤（炒菜柏）}{三杓}
+\ingredient{母鸡汤（炒菜杓）}{三杓}
 \ingredient{肉汤（炒菜杓）}{三杓}
 \ingredient{鲜菜（或心）}{一斤}
 \ingredient{绍酒}{一两二}
