Revise the recipe list

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -71,17 +71,18 @@
 
 \vspace{1\baselineskip}%
 
-\recipelist{2,7,8}……全书各篇，“滗”。《四》本《八》本作“泌”。径改。“滗”，滤。
+\recipelist{2,7,8,9,20,22,24,28,29,31,36,37,38}等多篇，“滗”。《四》本《八》本
+作“泌”。径改。“滗”，滤。
 
-\recipelist{4,24,71}……全书各篇，“搛”。《四》本《八》本作“扦”。径改。“搛”，（用
-筷子）夹。
+\recipelist{4,24,71,79,92,94,100,109}等多篇，“搛”。《四》本《八》本作“扦”。径
+改。“搛”，（用筷子）夹。
 
 \reciperef{6}。“锅巴”，《四》本《八》本作“锅粑”。据《中》本改。
 
 \reciperef{7}。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
 
-\recipelist{8,11,16}……全书各篇，“醪糟”，各本皆作“𰪿糟”。径改。“𰪿”系“𫃑”之类推
-简化字。
+\recipelist{8,11,16,17,35,54,73,78,109}等多篇，“醪糟”，各本皆作“𰪿糟”。径改。
+“𰪿”系“𫃑”之类推简化字。
 
 \reciperef{9}。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》本
 改。
@@ -100,8 +101,8 @@
 
 \recipelist{22,33}，“肉圆”。《四》本《八》本作“肉元”。径改。
 
-\recipelist{24,48,55}……全书各篇，“口蘑”。《四》本《八》本作“口茉”。据《中》本
-《重》本改。
+\recipelist{24,48,55,75,76,84,92,107,111}等多篇，“口蘑”。《四》本《八》本作
+“口茉”。据《中》本《重》本改。
 
 \recipelist{28,29,33,163,205,206,208,258,271}，“圆”。《四》本《八》本作“元”。
 径改。
@@ -136,7 +137,8 @@
 
 \reciperef{48}。“水龙头”，《四》本《八》本作“水笼头”。径改。
 
-\recipelist{50,79,85}……全书各篇，“番茄”。各本皆作“蕃茄”。径改。
+\recipelist{50,79,85,91,158,214,220,230,256,260,274}，“番茄”。各本皆作“蕃茄”。
+径改。
 
 \recipelist{52,63,149,254}，“劖”。《八》本作
 “{\bfseries\raise.19em\hbox{\scalebox{.675}[.75]{免}}\kern-.675em%
@@ -148,8 +150,8 @@
 
 \recipelist{55,69,153}，“须”。《四》本作“鬚”。据《八》本改。
 
-\recipelist{55,186,188}……全书各篇，“珧柱”。《四》本《八》本作“𧎼蛀”。《中》本
-作“𧎼柱”。径改。
+\recipelist{55,186,188,189,223,261,288,293}，“珧柱”。《四》本《八》本作
+“𧎼蛀”。《中》本作“𧎼柱”。径改。
 
 \reciperef{56}。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本
 皆作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
@@ -189,7 +191,8 @@
 
 \recipelist{120,121,123,223,257,262}，“𬂁”。“肫”之异体字。鸟类的胃。
 
-\recipelist{120,129,130}……全书各篇，“鳃”。各本皆作“腮”。径改。
+\recipelist{120,129,130,131,132,133,134,135,136,137}等多篇，“鳃”。各本皆作
+“腮”。径改。
 
 \reciperef{121}。《四》本《八》本标题作“川双脆”。径改。
 
