Add appendix part and move backmatter part

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -550,7 +550,7 @@
 
 \cleardoublepage
 
-\backmatter
+\appendix
 \bookmarksetup{startatroot}%
 \hypertarget{collation-notes}{}%
 \bookmark[dest=collation-notes,level=section]{校勘记}%
@@ -558,6 +558,7 @@
 
 \cleardoublepage
 
+\backmatter
 \pagestyle{empty}
 \pagenumbering{Alph}%   Upper case letter page numbers (and reset to 1)
 \setcounter{page}{25}%  Letter Y
