--- a/latex/recipe-071.tex
+++ b/latex/recipe-071.tex
@@ -51,7 +51,7 @@
 \step 先将鸡脯肉用刀两边相对𠟤成交差形的花纹，再切成四分见方的鸡丁，放入料酒、
 盐拌和均匀，放入碗内待用。
 
-\step 将干海椒去把，放在开水内发胀，春茸，再将姜蒜切成片，葱切成马耳朵形，分开
+\step 将干海椒去把，放在开水内发胀，舂茸，再将姜蒜切成片，葱切成马耳朵形，分开
 放入碗内待用。
 
 \step 将鸡蛋及豆粉拌成蛋清豆粉，鸡丁同蛋清豆粉拌匀；再将锅放于旺火上烧红，放入
