--- a/latex/recipe-234.tex
+++ b/latex/recipe-234.tex
@@ -27,21 +27,21 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{春芽烘蛋}
+\begin{recipe}{椿芽烘蛋}
 
 \ingredients
 
 \ingredient{鸡蛋}{五个}
 \ingredient{水豆粉}{三钱}
 \ingredient{味精}{一分}
-\ingredient{春芽尖}{三钱}
+\ingredient{椿芽尖}{三钱}
 \ingredient{盐}{四分}
 \ingredient{化猪油}{二两五}
 
 \preparation
 
 \step 将鸡蛋打入大碗中，再将水豆粉与清水和匀加入。用竹筷在碗内搅打约一分钟，待
-它匀和时，加入盐、味精，并将春芽尖叶剁成碎末一并放入，再继续搅打匀和。
+它匀和时，加入盐、味精，并将椿芽尖叶剁成碎末一并放入，再继续搅打匀和。
 
 \step 将锅置于旺火上烤热后，放入猪油二两，烧至冒烟即移于微火上（火上薄薄盖一层
 炭末，不要燃明火，以免把蛋烤糊），将搅好的鸡蛋倒入锅中，取碗一个扣在锅中鸡蛋
@@ -50,7 +50,7 @@
 
 \features
 
-此菜系烘烤而成，故色泽金黄，味咸香而鲜美，皮酥里嫩。冬末春初季节椿树始发新芽，
+此菜系烘烤而成，故色泽金黄，味咸香而鲜美，皮酥里嫩。冬末椿初季节椿树始发新芽，
 鲜嫩清香，故宜于此时食用。
 
 \end{recipe}
