Add a note for recipe 234

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -248,6 +248,8 @@
 \reciperef{233}。《四》本“八分火”之后无脚注标记{\footnotesize\circled{1}}。据
 《八》本《中》本补。
 
+\reciperef{234}。“椿芽”，《四》本《八》本作“春芽”。径改。
+
 \reciperef{245}。“盐六分”，《四》本《八》本作“盐一分”。据《中》本改。《四》本
 《八》本无脚注{\footnotesize\circled{1}\circled{2}\circled{3}\circled{4}}。据
 《中》本补。
