Revise note for recipe 194

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -224,7 +224,7 @@
 
 \reciperef{183}。“擀”，《四》本《八》本作“扞”。径改。
 
-\reciperef{194}。“白铝盘”，《四》本《八》本作“白锑盘”。径改。
+\reciperef{194}。“铝盘”，《四》本《八》本作“锑盘”。径改。
 
 \recipelist{202,204}，“红苕”。亦称番薯、红薯、甘薯。
 
