Revise note for JIAN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -74,8 +74,8 @@
 \recipelist{2,7,8,9,20,22,24,28,29,31,36,37,38}等多篇，“滗”。《四》本《八》本
 作“泌”。径改。“滗”，滤。
 
-\recipelist{4,24,71,79,92,94,100,109}等多篇，“搛”。《四》本《八》本作“扦”。径
-改。“搛”，（用筷子）夹。
+\recipelist{4,24,71,79,92,94,100,109,112}等多篇，“搛”。《四》本《八》本作
+“扦”。径改。“搛”，（用筷子）夹。
 
 \reciperef{6}。“锅巴”，《四》本《八》本作“锅粑”。据《中》本改。
 
