--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -54,7 +54,7 @@
 成都小吃的特色餐饮企业。原书未公开出版，仅以内部资料发行于一九七二年七月。据编
 印说明中记述，本书系参照《中国名菜谱第七辑》和《重庆名菜谱》修改整理而成。四川
 省蔬菜水产饮食服务公司编纂，一九七七年七月发行的内部资料《四川菜谱》收集了两百
-六十四个菜品，约有半数来自于本书。成都饮食公司一九八八年九月再版重印本书，仍以
+六十四个菜品，有少部分来自于本书。成都饮食公司一九八八年九月再版重印本书，仍以
 内部资料发行。
 
 今以《四川菜谱》成都市饮食公司一九七二年七月版为底本。校以《四川菜谱》成都市饮
