Replace vspace with an empty paragraph

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -69,7 +69,7 @@
 校勘基本方针。保留方言用字。修正异体字。对已经弃用的同音简化字和类推简化字，恢
 复原字。修正误植、错字、别字。
 
-\vspace{1\baselineskip}%
+\null%
 
 \recipelist{2,7,8,9,20,22,24,28,29,31,36,37,38}等多篇，“滗”。《四》本《八》本
 作“泌”。径改。“滗”，滤。
