--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -81,6 +81,7 @@
 \bookmark[dest=copyright,level=section]{版权页}%
 \enlargethispage{1.75\baselineskip}
 \input{copyright.tex}
+\index{竹叶花椒}%
 \cleardoublepage
 
 \hypertarget{chairman-mao-quotes}{}%
@@ -557,6 +558,13 @@
 \hypertarget{collation-notes}{}%
 \bookmark[dest=collation-notes,level=section]{校勘记}%
 \input{collation-notes.tex}
+\clearpage
+\hypertarget{index}{}%
+\bookmark[dest=index,level=section]{索引}%
+{%
+\footnotesize%
+\printindex
+}
 \cleardoublepage
 
 \backmatter
