--- a/latex/recipe-084.tex
+++ b/latex/recipe-084.tex
@@ -40,7 +40,7 @@
 \ingredient{水发口蘑}{二钱}
 \ingredient{鲜笋}{四钱}
 \ingredient{火腿}{三钱}
-\ingredient{豉豆尖苞}{十余根}
+\ingredient{豌豆尖苞}{十余根}
 \ingredient{化猪油}{四两}
 \ingredient{鸡汤}{五两}
 \ingredient{熟鸡皮}{一两}
