--- a/latex/recipe-066.tex
+++ b/latex/recipe-066.tex
@@ -49,7 +49,7 @@
 
 \step 选肥嫩仔鸡，宰杀后除净毛，砍去头足，除去内脏，剔除骨头。将鸡肉切成六、七
 分大的小块，盛入大碗中。用拍松的姜、大葱放入鸡肉中，再加料酒、盐、酱油、一起拌
-匀，稍醃后待用。
+匀，稍腌后待用。
 
 \step 白糖、醋、酱油放入小碗中搅匀，成汁待用。
 
