--- a/latex/recipe-016.tex
+++ b/latex/recipe-016.tex
@@ -55,7 +55,7 @@
 \step 取连皮的猪肥肉和净瘦肉各半斤，刮洗干净，拈净残毛。肥肉切成一寸半长、一寸
 宽、一分二厚的片；痩肉切成厚一分，长、宽与肥肉相等的片，各切二十片。另将红、白
 酱油、料酒、甜酱、醪糟、红糖、豆腐乳水、葱、姜末等一并放入盆内拌匀，将肥瘦肉片
-放入，调拌后醃十余分钟，使之入味；再将米粉放入拌匀（如太干可加少许清水），使米
+放入，调拌后腌十余分钟，使之入味；再将米粉放入拌匀（如太干可加少许清水），使米
 粉沾在肉片上。青豆（即嫩黄豆，嫩时为青色）用清水洗净。
 
 \step 将鲜荷叶用清水洗净，入开水里烫一下，使它柔软不易折断；然后切成四寸长的等
