Add note for YAN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -87,6 +87,8 @@
 \reciperef{9}。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》本
 改。
 
+\recipelist{16,66,115,164}。“腌”，《四》本《八》本作“醃”。径改。
+
 \reciperef{17}。“瓤”，各本皆作“穰”。径改。
 
 \recipelist{18,19}，“尖刀圆子”。《四》本《八》本《七》本作“尖刀元子”。《中》本
