--- a/latex/recipe-011.tex
+++ b/latex/recipe-011.tex
@@ -38,7 +38,7 @@
 \ingredient{花椒}{六分}
 \ingredient{盐}{一分}
 \ingredient{葱叶}{一钱}
-\ingredient{鲜碗豆}{四两}
+\ingredient{鲜豌豆}{四两}
 \ingredient{红糖}{三钱}
 \ingredient{醪糟}{三钱}
 \ingredient{姜米}{一钱}
