--- a/latex/recipe-145.tex
+++ b/latex/recipe-145.tex
@@ -41,7 +41,7 @@
 \ingredient{香油}{五钱}
 \ingredient{火腿}{五钱}
 \ingredient{鲜笋}{一两}
-\ingredient{鲜碗豆米}{一两}
+\ingredient{鲜豌豆米}{一两}
 \ingredient{料酒}{五钱}
 \ingredient{味精}{二分}
 \ingredient{胡椒}{二分}
