Add a note for WOYOU

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -159,6 +159,8 @@
 皆作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
 《中》本改。
 
+\reciperef{61}。“窝油”，不知何物。
+
 \reciperef{63}。各本皆作“劖（音沾……）”。误。据《康熙字典》，“劖”，锄衔切，
 {ch\'{a}n}{ㄔ\kern-.333333emㄢ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}。
 
