--- a/latex/recipe-069.tex
+++ b/latex/recipe-069.tex
@@ -39,13 +39,13 @@
 \ingredient{酱油}{三钱}
 \ingredient{豆瓣}{八钱}
 \ingredient{水豆粉}{三分}
-\ingredient{仔姜}{一钱}
+\ingredient{子姜}{一钱}
 \ingredient{醋}{少许}
 
 \preparation
 
 \step 芹菜只掐嫩心部分，去叶抽筋，蒜苗去须、去黄叶，均淘洗干净，用刀分别正切成
-一寸长的节，蒜苗头划成四瓣，仔姜切成细丝，豆瓣剁碎，鸡肉切成一寸五长的二粗丝。
+一寸长的节，蒜苗头划成四瓣，子姜切成细丝，豆瓣剁碎，鸡肉切成一寸五长的二粗丝。
 
 \step 混合油在锅内烧至六成火候，即将鸡丝倒下，煵干水气，炒散后（刚干水气，不能
 煸干）倒豆瓣、姜丝，煵出香味即下料酒与鸡丝，共同炒匀后，芹黄、蒜苗一齐倒下，再
