Add a note for ZIJIANG

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -167,6 +167,8 @@
 \recipelist{67,68,82,92,118,127,150,255,280,301}，“熘”。《四》本《八》本作
 “溜”。径改。
 
+\reciperef{69}。“子姜”，《四》本《八》本做“仔姜”。径改。
+
 \reciperef{73}。“箅子”，《四》本作“篦子”，《八》本作“篾子”。径改。
 
 \reciperef{74}。脚注{\footnotesize\circled{1}}中“……盛产于成都近郊。”《中》本作
