--- a/latex/recipe-264.tex
+++ b/latex/recipe-264.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{子鸡翅膀}{八对}
+\ingredient{仔鸡翅膀}{八对}
 \ingredient{生猪排骨}{十六节}
 \ingredient{鲜笋}{四两}
 \ingredient{熟火腿}{二两}
@@ -54,7 +54,7 @@
 
 \preparation
 
-\step 选好八对子鸡翅后，用清水洗净粗皮，夹净细毛，在锅内煮熟，用清水冰冷；再放
+\step 选好八对仔鸡翅后，用清水洗净粗皮，夹净细毛，在锅内煮熟，用清水冰冷；再放
 至墩子上，从弯处切断，两头不用只要第二节。又选大生猪排十六节，二寸五长，在汤锅
 内煮熟待用。
 
