--- a/latex/recipe-303.tex
+++ b/latex/recipe-303.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{净子公鸡肉}{七两}
+\ingredient{净仔公鸡肉}{七两}
 \ingredient{泡海椒}{七钱}
 \ingredient{净冬笋}{二两}
 \ingredient{豆瓣辣酱}{六钱}
