--- a/latex/recipe-302.tex
+++ b/latex/recipe-302.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{格呢子鸡}
+\begin{recipe}{格呢仔鸡}
 
 \ingredients
 
