Add notes for ZIJI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -267,6 +267,8 @@
 \reciperef{264}。“抽去……扦子骨……入抽去扦子骨处”。“扦”，~《四》本作“杄”，《八》
 本作“{\bfseries\scalebox{.65}[1]{林}\kern-.12em\scalebox{.55}[1]{千}}”。径改。
 
+\recipelist{264,276,302}。“仔鸡”，《四》本《八》本作“子鸡”。径改。
+
 \reciperef{267}。“扳指”，《四》本《八》本《重》本作“斑指”。径改。“……以防炸糊。”
 “糊”，《四》本《八》本《重》本皆作“胡”。径改。
 
@@ -277,6 +279,8 @@
 \reciperef{273}。各本标题皆作“汗蒸鱼”。径改。
 
 \reciperef{292}。“莴笋”，《四》本《八》本作“窝笋”。径改。
+
+\reciperef{303}。“仔公鸡”，《四》本《八》本作“子公鸡”。径改。
 
 \end{list}
 \endgroup%
