Revise note for ZIJI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -280,7 +280,7 @@
 
 \reciperef{292}。“莴笋”，《四》本《八》本作“窝笋”。径改。
 
-\reciperef{303}。“仔公鸡”，《四》本《八》本作“子公鸡”。径改。
+\recipelist{303,307}。“仔公鸡”，《四》本《八》本作“子公鸡”。径改。
 
 \end{list}
 \endgroup%
