--- a/latex/recipe-219.tex
+++ b/latex/recipe-219.tex
@@ -41,7 +41,7 @@
 \ingredient{盐}{五分}
 \ingredient{料酒}{三钱}
 \ingredient{清汤}{四两}
-\ingredient{鸡化油}{三钱}
+\ingredient{化鸡油}{三钱}
 \ingredient{化猪油}{一两}
 \ingredient{姜}{五钱}
 \ingredient{葱}{五钱}
