--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -178,6 +178,8 @@
 \reciperef{81}。“淖”，
 {n\`{a}o}{ㄋ\kern-.333333emㄠ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em} 泥也。
 
+\recipelist{84,219}。“化鸡油”，《四》本《八》本作“鸡化油”。乙正。
+
 \reciperef{87}。“擀”，《四》本作“扞”，《八》本作“撖”。径改。
 
 \reciperef{94}。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}{ㄎ\kern-.25emㄚ}
