Rearrange the paragraph

--- a/latex/recipe-045.tex
+++ b/latex/recipe-045.tex
@@ -50,9 +50,9 @@
 \preparation
 
 \step 将猪腰选好片成两块，去腰臊，用刀在腰的里面立划深约腰厚的三分之二的十字花
-刀，然后切成长一寸、宽八分的块，与料酒、盐及水豆粉拌匀；白糖、醋、酱油、味
-精、清汤及水豆粉二钱同盛一碗中兑成滋汁；辣椒切成马耳朵形的段；姜、蒜切薄片；
-葱切六分长的段。
+刀，然后切成长一寸、宽八分的块，与料酒、盐及水豆粉拌匀；白糖、醋、酱油、味精、
+清汤及水豆粉二钱同盛一碗中兑成滋汁；辣椒切成马耳朵形的段；姜、蒜切薄片；葱切六
+分长的段。
 
 \step 油下锅，在旺火上烧到八成火候时，放进辣椒段，炒成黑红色时，加入花椒，放下
 腰块、葱、姜、蒜，快速炒散，随即沿着锅边倾下已兑好的滋汁，迅速翻炒，颠簸起锅。
