Use \begingroup and \endgroup

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -561,10 +561,10 @@
 \clearpage
 \hypertarget{index}{}%
 \bookmark[dest=index,level=section]{索引}%
-{%
+\begingroup%
 \small%
 \printindex
-}
+\endgroup%
 \cleardoublepage
 
 \backmatter
