Extra half title and frontispiece

--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -72,6 +72,20 @@
 \null%
 \cleardoublepage
 
+\hypertarget{half-title}{}%
+\bookmark[dest=half-title,level=section]{书名页}%
+\enlargethispage{1.75\baselineskip}
+\input{half-title.tex}
+\cleardoublepage
+
+\hypertarget{frontispiece}{}%
+\bookmark[dest=frontispiece,level=section]{卷首插图}%
+\enlargethispage{1.75\baselineskip}
+\input{frontispiece.tex}
+\index{茨菰}%
+\enlargethispage{1.75\baselineskip}
+\cleardoublepage
+
 \hypertarget{title-page}{}%
 \bookmark[dest=title-page,level=section]{标题页}%
 \enlargethispage{1.75\baselineskip}
