--- a/latex/recipe-088.tex
+++ b/latex/recipe-088.tex
@@ -32,7 +32,7 @@
 \ingredients
 
 \ingredient{生鸡脯肉}{半斤}
-\ingredient{慈姑（去皮）}{二两}
+\ingredient{茨菰（去皮）}{二两}
 \ingredient{鸡蛋}{三个}
 \ingredient{干豆粉}{六钱}
 \ingredient{料酒}{三钱}
@@ -54,7 +54,7 @@
 和均匀待用。
 
 \step 蛋清和豆粉调成蛋清豆粉；用三分之一的蛋清豆粉将鸡脯肉拌匀；把网油平铺于案
-上，去掉油梗，将余下的蛋清豆粉抹在网油上，将拌好的鸡脯平铺于网油上，再铺上慈姑
+上，去掉油梗，将余下的蛋清豆粉抹在网油上，将拌好的鸡脯平铺于网油上，再铺上茨菰
 片，面上再盖上一层鸡脯，然后将网油裹成八分宽的扁形，照样裹完成鸡卷。
 
 \step 锅在旺火上放下菜油一斤烧至六成热时，将裹好的鸡卷一根一根地放入锅内炸至金
