--- a/latex/recipe-093.tex
+++ b/latex/recipe-093.tex
@@ -35,7 +35,7 @@
 \ingredient{菜油}{一斤耗三两}
 \ingredient{生菜}{二两}
 \ingredient{芝麻}{二两}
-\ingredient{慈姑}{二两}
+\ingredient{茨菰}{二两}
 \ingredient{白糖}{二分}
 \ingredient{料酒}{五钱}
 \ingredient{鸡蛋清}{二个}
@@ -47,9 +47,9 @@
 
 \preparation
 
-\step 鸡肉剔去粗筋，慈姑去皮淘净，分别用刀剁成细泥；芝麻用温热水泡十五分钟后，
+\step 鸡肉剔去粗筋，茨菰去皮淘净，分别用刀剁成细泥；芝麻用温热水泡十五分钟后，
 用手搓揉，使壳在水面浮起，用漏瓢打去，将余下芝麻在热锅上炕成浅黄色至熟。鸡蛋清
-调成蛋清豆粉，同鸡泥、慈姑泥加盐、胡椒面、香油、料酒共拌成馅。
+调成蛋清豆粉，同鸡泥、茨菰泥加盐、胡椒面、香油、料酒共拌成馅。
 
 \step 先用芝麻一半在九寸盘内铺匀，再放拌好的焰于盘内，用手拍压平整约四分厚，剩
 余一半芝麻均匀地撒在上面成半制品。
