--- a/latex/recipe-117.tex
+++ b/latex/recipe-117.tex
@@ -34,7 +34,7 @@
 \ingredient{水盆鸭}{一只约二斤半}
 \ingredient{熟肥膘肉}{二两}
 \ingredient{熟火腿}{一两}
-\ingredient{慈姑}{五个}
+\ingredient{茨菰}{五个}
 \ingredient{鸡蛋}{三个}
 \ingredient{干豆粉}{一两}
 \ingredient{净生菜}{三两}
@@ -53,9 +53,9 @@
 内，上笼蒸𤆵。取出晾冷，剔去全部骨头（注意保持鸭皮完整，不要弄破烂），将鸭肉取
 下。
 
-\step 取下的鸭肉切成头粗丝，肥膘、火腿、慈姑切成二粗丝。
+\step 取下的鸭肉切成头粗丝，肥膘、火腿、茨菰切成二粗丝。
 
-\step 将鸭肉丝、肥膘、火腿、慈姑等丝入盆，加胡椒、味精、盐、料酒、鸡蛋、豆粉共
+\step 将鸭肉丝、肥膘、火腿、茨菰等丝入盆，加胡椒、味精、盐、料酒、鸡蛋、豆粉共
 同拌匀；再将剔下的鸭皮置于净平盘内（鸭皮表层向底）涂抹鸡蛋、豆粉调好的蛋芡于
 上，把拌好的各种丝放于鸭皮上按平。
 
