--- a/latex/recipe-206.tex
+++ b/latex/recipe-206.tex
@@ -27,11 +27,11 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{慈姑饼}
+\begin{recipe}{茨菰饼}
 
 \ingredients
 
-\ingredient{慈姑}{二斤}
+\ingredient{茨菰}{二斤}
 \ingredient{化猪油}{一两五}
 \ingredient{白糖}{四两}
 \ingredient{干豆粉}{一两}
@@ -44,8 +44,8 @@
 
 \step 白糖、玫瑰、面粉、化猪油拌匀成玫瑰馅。
 
-\step 鲜慈姑将皮削净，洗净皮渣，用刀拍烂，剁成细泥（不现颗粒），加细酒米粉拌
-匀，用蒸碗盛起上笼蒸熟取下，趁热将慈姑泥分成汤圆大小的量，用干净湿帕垫在手上逐
+\step 鲜茨菰将皮削净，洗净皮渣，用刀拍烂，剁成细泥（不现颗粒），加细酒米粉拌
+匀，用蒸碗盛起上笼蒸熟取下，趁热将茨菰泥分成汤圆大小的量，用干净湿帕垫在手上逐
 个包入玫瑰馅，捏成扁圆形的饼，沾清水将交口处抹光滑。全部包好后，撒上一层过箩的
 干豆粉待用。
 
