--- a/latex/recipe-200.tex
+++ b/latex/recipe-200.tex
@@ -39,7 +39,7 @@
 \ingredient{瓜片}{三钱}
 \ingredient{白糖}{三两}
 \ingredient{蜜樱桃}{三钱}
-\ingredient{鲜慈姑}{五钱}
+\ingredient{鲜茨菰}{五钱}
 \ingredient{金丝蜜枣}{三钱}
 \ingredient{桃仁}{五钱}
 \ingredient{玫瑰}{一钱}
@@ -47,7 +47,7 @@
 
 \preparation
 
-\step 鲜慈姑削皮用刀切成小指甲壳，湘莲去衣去心，扁豆去壳，连同百合上笼蒸𤆵。桃
+\step 鲜茨菰削皮用刀切成小指甲壳，湘莲去衣去心，扁豆去壳，连同百合上笼蒸𤆵。桃
 仁泡胀撕去皮，炸酥，剁碎。樱桃对剖。瓜片、蜜枣切成碎丁，共成配料。
 
 \step 锅内用油烧至五成火，先将面粉倒下炒散，再倒肥儿粉混合，再炒散，即掺入开
