--- a/latex/copyright.tex
+++ b/latex/copyright.tex
@@ -29,13 +29,6 @@
 %
 \begingroup%
 
-% XeLaTeX
-\newcommand\XeLaTeX{%
-	X\kern-.1em\lower.5ex\hbox{\scalebox{-1}[1]{E}}\kern-.15em%
-	L\kern-.36em\raise.428571ex\hbox{\scalefont{.7}{A}}\kern-.15em%
-	T\kern-.166667em\lower.5ex\hbox{E}\kern-.125em{X}%
-}
-
 \footnotesize%
 \singlespacing%
 \setlength{\parindent}{0pt}%
@@ -83,17 +76,7 @@ possibility of such damage.}
 
 \vfill
 
-\setlength{\parskip}{.3125\baselineskip}%
-\vspace{-2\baselineskip}
-\begin{tabbing}
-\hspace{9.5625em}\= \kill
-\textsc{git} commit name:       \>\texttt{\gitcommitname}\\
-\textsc{git} commit hash:       \>\texttt{\gitcommithash}\\
-\textsc{git} committer date:    \>\texttt{\gitcommitterdate}\\
-\textsc{pdf} build date:        \>\texttt{\pdfbuilddate}\\
-\textsc{pdf} build host:        \>\texttt{\pdfbuildhost}
-\end{tabbing}
-\vspace{-1\baselineskip}
+\setlength{\parskip}{.5\baselineskip}%
 
 Book design and collation by \textsc{Gong}~Jie\!（龚颉）\!\!\!.\\
 Title page illustration by Matilda Smith \& John Nugent Fitch. (1918,
@@ -101,8 +84,7 @@ Title page illustration by Matilda Smith \& John Nugent Fitch. (1918,
 \textit{Curtis's Botanical Magazine, London., vol.~144} [\textsc{ser}.~4,
 \textsc{vol}.~14]. \textsc{Tab}.~8754.---1, tip of leaf; 2, female flower;
 3, the same, sepals and petals removed; 4, fruit; 5, seed;---\textit{all
-enlarged}.\\
-This book is composed in \XeLaTeX.
+enlarged}.
 
 This book is designed to represent the first edition of the paperback book
 \textit{Sichuan Cookbook}{\kafamily（四川菜谱）}\!\!\! by \textsc{Chengdu}
