Adjust the text position horizentally

--- a/latex/title-page-1972.tex
+++ b/latex/title-page-1972.tex
@@ -28,7 +28,7 @@
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
 \null%
-\vspace{.75\baselineskip}
+\vspace{2\baselineskip}
 \begin{center}
 {%
 	\huge\bfseries%
