--- a/latex/recipe-072.tex
+++ b/latex/recipe-072.tex
@@ -49,7 +49,7 @@
 
 \preparation
 
-\step 鸡宰杀后去血退毛，去头足四大骨，清洗干净，将鸡连骨砍成四分见方的丁，放入
+\step 鸡宰杀后去血煺毛，去头足四大骨，清洗干净，将鸡连骨砍成四分见方的丁，放入
 碗内待用；将蒜苗切成四分长的节，姜、蒜切成薄片，干辣椒切成节，分别放入盘内待
 用。
 
