--- a/latex/recipe-078.tex
+++ b/latex/recipe-078.tex
@@ -48,7 +48,7 @@
 
 \preparation
 
-\step 仔鸡宰杀后去血退毛，清洗干净，从背脊部砍开，挖去内脏，去掉足爪不用，再清
+\step 仔鸡宰杀后去血煺毛，清洗干净，从背脊部砍开，挖去内脏，去掉足爪不用，再清
 洗一次。再用刀尖将鸡脯及鸡腿的肉剖开，把腿、翅、骨微微宰断，用手将盐、葱、姜、
 酱油、醪糟、料酒、花椒等抹在鸡的内外，抹匀，渍一小时。
 
