--- a/latex/recipe-102.tex
+++ b/latex/recipe-102.tex
@@ -50,7 +50,7 @@
 \preparation
 
 \step 将水魔芋切成长一寸六分、宽、厚各四分的长方条，用沸水在旺火上汆两次，去其
-石灰水味，然后漂入温水中。将仔鸭宰杀，退毛，剖腹，去脏，洗净，剔骨，头颈、翅尖
+石灰水味，然后漂入温水中。将仔鸭宰杀，煺毛，剖腹，去脏，洗净，剔骨，头颈、翅尖
 和脚掌砍去不用，再砍成长一寸半、宽五分的长条块。
 
 \step 将锅置于旺火上烧热，放入混合油，烧至冒烟时倒入鸭条，煸除水份，至鸭条现黄
