--- a/latex/recipe-108.tex
+++ b/latex/recipe-108.tex
@@ -41,7 +41,7 @@
 
 \preparation
 
-\step 活肥鸭一只（宰后三斤左右），宰杀后放尽血，退毛，去掉舌、掌（另作他用）；
+\step 活肥鸭一只（宰后三斤左右），宰杀后放尽血，煺毛，去掉舌、掌（另作他用）；
 再在鸭的背面尾部横割一刀，挖去内脏，然后用水清洗干净，下入煮锅内紧一下，并用铁
 抓子把鸭抓住，在沸水里面连提两三次，使血腥水随着沸水淘尽；捞起后齐嘴角切去鸭嘴，
 将翅膀翻向背上盘起。虫草用温水泡一刻钟，用手轻轻搓洗，去其泥沙、杂质后捞出。
