--- a/latex/recipe-246.tex
+++ b/latex/recipe-246.tex
@@ -49,7 +49,7 @@
 
 \preparation
 
-\step 将三支鸽子宰杀后，去血退毛，清洗干净，从尾部的背面横开一口，挖去内脏，去
+\step 将三支鸽子宰杀后，去血煺毛，清洗干净，从尾部的背面横开一口，挖去内脏，去
 掉脚爪，用清水洗净，将鸽子的两翅盘向鸽背，用手将盐、料酒、酱油、姜、花椒、葱等
 放入鸽子的内外抹匀，放在盘内浸渍半小时。
 
