--- a/latex/recipe-253.tex
+++ b/latex/recipe-253.tex
@@ -48,7 +48,7 @@
 
 \preparation
 
-\step 鸽子三只，宰杀后去血，退毛，从背脊上顺着割开，挖去五脏，去掉足爪；清洗干
+\step 鸽子三只，宰杀后去血，煺毛，从背脊上顺着割开，挖去五脏，去掉足爪；清洗干
 净后，用手将盐、酱油、料酒等在鸽的全身内外抹匀，然后将鸽的两翅翻向鸽背盘起。
 
 在炒锅内放入猪油置于旺火上烧至七、八成热，将鸽子炸五分钟捞起，用蒸碗装好，加
