Note for TUIMAO

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -159,6 +159,8 @@
 
 \reciperef{69}。“子姜”，《四》本《八》本做“仔姜”。径改。
 
+\recipelist{72,78,102,108,246,253}，“煺毛”。《四》本《八》本作“退毛”。径改。
+
 \reciperef{73}。“箅子”，《四》本作“篦子”，《八》本作“篾子”。径改。
 
 \reciperef{74}。脚注{\footnotesize\circled{1}}中“……盛产于成都近郊。”《中》本作
