--- a/latex/copyright.tex
+++ b/latex/copyright.tex
@@ -87,7 +87,7 @@ Title page illustration by Matilda Smith \& John Nugent Fitch. (1918,
 enlarged}.
 
 This book is designed to represent the first edition of the paperback book
-\textit{Sichuan Cookbook}{\kafamily（四川菜谱）}\!\!\! by \textsc{Chengdu}
+\textit{Sichuan Cookbook}{\kafamily（四川菜谱）}\!\! by \textsc{Chengdu}
 Catering Company\!（成都市饮食公司）\!\!\!, which was released in July 1972.
 Special care has been made to preserve the original appearance of this book's
 typographical layouts, font styles, font sizes, and illustrations.
