--- a/latex/recipe-228.tex
+++ b/latex/recipe-228.tex
@@ -53,7 +53,7 @@
 三种色的碗内调匀待用。
 
 \step 豆腐皮上笼蒸至五分钟，取出沾干气水，每张趁热抹上一层一个颜色，抹完为止。
-再一张一张地重起，成为三种颜色。四张豆腐皮一叠，如果再重四张，共为两叠。上笼蒸
+再一张一张地重起，成为三种颜色。四张豆腐皮一叠，如此再重四张，共为两叠。上笼蒸
 五分钟取出，晾冷用刀切成一寸八长、二分五宽的条子定碗，定时有颜色的一面挨碗底，
 以二十四条摆成万字形；其余的用碗装满，加入鸡油、料酒及清汤少许，再上笼蒸五分
 钟。走菜时用白油将建兰菜炒好垫入盘内，取出笼内的豆腐皮翻入菜上，锅内加入清汤，
