--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -242,8 +242,8 @@
 
 \recipelist{223,261}，“什锦”。《四》本《八》本作“什景”。径改。
 
-\reciperef{228}。“四张豆腐皮一叠，如果再重四张，共为两叠。”“叠”，《四》本《八》
-本作“迭”。径改。
+\reciperef{228}。“四张豆腐皮一叠，如此再重四张，共为两叠。”“叠”，《四》本《八》
+本作“迭”。径改。“如此”，《四》本《八》本作“如果”。径改。
 
 \reciperef{233}。《四》本“八分火”之后无脚注标记{\footnotesize\circled{1}}。据
 《八》本《中》本补。
