Move frontispiece caption to the copyright page

--- a/latex/copyright.tex
+++ b/latex/copyright.tex
@@ -74,11 +74,21 @@ possibility of such damage.}
 
 \endgroup
 
+\vspace{-.5\baselineskip}
+
 \vfill
 
 \setlength{\parskip}{.5\baselineskip}%
 
-Book design and collation by \textsc{Gong}~Jie\!（龚颉）\!\!\!.\\
+Book design and collation by \textsc{Gong}~Jie\!（龚颉）\!\!\!.
+
+Frontispiece by Christiaan Sepp. Sagittaria sagittifolia\!（茨菰）\!from Jan
+Kops (1822). \textit{Flora Batava, Volume 4}. De Breuk \& Smits.---\textsc{a},
+upper surface of the leaf; \textsc{b}, lower surface; \textit{a}, chalice of a
+male flower; \textit{b}, a separate petal of the same flower; \textit{c}, one
+of the stamens apart and enlarged; \textit{d}, ripe fruits form a fairly large
+ball.
+
 Title page illustration by Matilda Smith \& John Nugent Fitch. (1918,
 \textsc{april--june}). Zanthoxylum planispinum\!（竹叶花椒）\!\!\!.
 \textit{Curtis's Botanical Magazine, London., vol.~144} [\textsc{ser}.~4,
