--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -81,7 +81,6 @@
 \hypertarget{frontispiece}{}%
 \bookmark[dest=frontispiece,level=section]{卷首插图}%
 \input{frontispiece.tex}
-\index{茨菰}%
 \cleardoublepage
 
 \hypertarget{title-page}{}%
@@ -91,7 +90,9 @@
 \clearpage
 \hypertarget{copyright}{}%
 \bookmark[dest=copyright,level=section]{版权页}%
+\enlargethispage{1.75\baselineskip}
 \input{copyright.tex}
+\index{茨菰}%
 \index{竹叶花椒}%
 \cleardoublepage
 
