--- a/latex/recipe-118.tex
+++ b/latex/recipe-118.tex
@@ -56,7 +56,7 @@
 姜去皮，洗净，切成四分见方薄片。蒜瓣切成薄片。
 
 \step 将水豆粉、酱油、白糖、二汤、醋、味精和葱段一起放入小碗中搅匀待用。另用大
-碗将蛋清和干豆粉搅匀，加料酒、鸭肝片一起搅勾待用。
+碗将蛋清和干豆粉搅匀，加料酒、鸭肝片一起搅匀待用。
 
 \step 锅放炉上用旺火烧红，倒入猪油烧至六成热。将豆粉、鸭肝搅匀放入油中拨散；再
 将蒜片、姜片、泡红辣椒、兰片、口蘑片等依次放入锅中炒匀；随后将小碗中的水豆盼等
