--- a/latex/recipe-160.tex
+++ b/latex/recipe-160.tex
@@ -57,7 +57,7 @@
 片。
 
 \step 将鸡蛋清一个与干豆粉三钱在大碗中拌匀，再将虾仁、肉丁、火腿丁、豌豆等一起
-放入，加盐、料酒、味精、胡椒面等拌勾成为馅。
+放入，加盐、料酒、味精、胡椒面等拌匀成为馅。
 
 \step 将切好的豆油皮平铺大平盘中，用手指粘蛋清豆粉（用鸡蛋清一个和豆粉二钱调
 成）均匀地抹在豆油皮上、每张豆油皮中央放馅二钱，将豆油皮包起来，每个虾包长约七
