--- a/latex/recipe-106.tex
+++ b/latex/recipe-106.tex
@@ -55,8 +55,8 @@
 鸭肉切成与白果大的丁颗，连同白果造匀，放于鸭脯上，将原汁滗入，加汤上笼蒸半小
 时，至𤆵烂翻入圆盘内。
 
-\step 锅内掺清汤，加余下的料酒、盐、味精、胡椒、水豆粉少许勾二流芡，放鸡油，挂
-白汁于鸭上即成。
+\step 锅内掺清汤，加余下的料酒、盐、味精、胡椒、水豆粉少许，勾二流芡，放鸡油，
+挂白汁于鸭上即成。
 
 \features
 
