Add missing YAO

--- a/latex/recipe-043.tex
+++ b/latex/recipe-043.tex
@@ -49,11 +49,11 @@
 \step 将猪肝横切成薄片，愈薄愈好，片张宜大；加酱油拌匀，渍半分钟，再放入水豆粉
 混和均匀。
 
-\step 将净锅在旺火上烧至冒青烟端离火口，将菜油入浪一下倒出。再将猪油放入，重将
-锅置于旺火上，烧至冒大烟时，把肝片放入锅中，用汤瓢前后左右迅速轻轻推动，并翻动
-数下，再推至锅边，将锅斜放。随即加入葱末，煸炒几下。烹入临时兑好的醋、白糖、胡
-椒面、味精、水豆粉、料酒、清汤等调料。到滋汁烧沸时，推下肝片，翻炒两下，放入红
-酱油，即将锅端起颠簸几下，使调味均匀，火候一致即成。
+\step 将净锅在旺火上烧至冒青烟端离火口，将菜油舀入浪一下倒出。再将猪油放入，重
+将锅置于旺火上，烧至冒大烟时，把肝片放入锅中，用汤瓢前后左右迅速轻轻推动，并翻
+动数下，再推至锅边，将锅斜放。随即加入葱末，煸炒几下。烹入临时兑好的醋、白糖、
+胡椒面、味精、水豆粉、料酒、清汤等调料。到滋汁烧沸时，推下肝片，翻炒两下，放入
+红酱油，即将锅端起颠簸几下，使调味均匀，火候一致即成。
 
 \features
 
