Fix missing JIN

--- a/latex/recipe-075.tex
+++ b/latex/recipe-075.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{公鸡翅八对}{约一半}
+\ingredient{公鸡翅八对}{约一斤半}
 \ingredient{水发口蘑}{一两八}
 \ingredient{冬笋剥皮去根}{二两五}
 \ingredient{葱白}{六钱}
