--- a/latex/recipe-079.tex
+++ b/latex/recipe-079.tex
@@ -54,7 +54,7 @@
 散”时取出晾冷；即将鸡骨全身去净，鸡蛋调成蛋清豆粉，于鸡肉上抹匀。
 
 \step 菜油在锅内烧至七成火候，将鸡放入炸成金黄色，将油滗尽，淋上香油簸匀搛起
-来，砍成大一字条盛入盘的端，另一端放生菜即成。
+来，砍成大一字条盛入盘的一端，另一端放生菜即成。
 
 \features
 
