--- a/latex/recipe-085.tex
+++ b/latex/recipe-085.tex
@@ -47,8 +47,8 @@
 \step 生鸡脯肉用刀背捶成细茸，剔去筋缠；鸡蛋清、鸡蛋黄分别放在两个碗内。
 
 \step 鸡茸用清汤调散，鸡蛋清用筷子搅散，两样合在一起，然后加入味精、盐、料酒、
-胡椒面、水豆粉，再用筷子调匀；鸡蛋黄内加入清汤、味精、盐、料酒、胡椒面、水豆粉，
-用筷子调匀。
+胡椒面、水豆粉，再用筷子调匀；鸡蛋黄内加入清汤、味精、盐、料酒、胡椒面、水豆
+粉，用筷子调匀。
 
 \step 把炒锅放在旺火上，倒入猪油，烧至六成热时放入调好的鸡茸，用瓢子不断翻炒，
 茸变稠时即熟。取出鸡茸一半放在盘内，剩下的一半加入番茄酱，再不断翻搅着炒，番茄
