--- a/latex/recipe-085.tex
+++ b/latex/recipe-085.tex
@@ -51,7 +51,7 @@
 粉，用筷子调匀。
 
 \step 把炒锅放在旺火上，倒入猪油，烧至六成热时放入调好的鸡茸，用瓢子不断翻炒，
-茸变稠时即熟。取出鸡茸一半放在盘内，剩下的一半加入番茄酱，再不断翻搅着炒，番茄
+鸡茸变稠时即熟。取出鸡茸一半放在盘内，剩下的一半加入番茄酱，再不断翻搅着炒，番茄
 酱的颜色与鸡茸的颜色（红色）炒成一样，舀出与前一半词放在一个盘内（不能混在一
 起）。炒锅内再加入猪油，烧至六成热时，放入调好的蛋黄，炒到蛋黄变稠时即熟，取出
 放在盘内的另一处即成。
