Add missing PIAN

--- a/latex/recipe-087.tex
+++ b/latex/recipe-087.tex
@@ -58,7 +58,7 @@
 拈起，边炸边拈，保持白色，盛入盘。
 
 \step 另用油少许，将小白菜心、火腿、口蘑煸炒，即掺入鸡汤、水豆粉、盐、料酒、味
-精、胡椒面烹成白汁，再将鸡倒下几簸，淋鸡油起锅。
+精、胡椒面烹成白汁，再将鸡片倒下几簸，淋鸡油起锅。
 
 \features
 
