Fix wrong placing ingredients

--- a/latex/recipe-094.tex
+++ b/latex/recipe-094.tex
@@ -33,6 +33,15 @@
 
 \ingredient{熟鸡脯肉}{四两}
 \ingredient{生鸡脯肉}{一两五}
+\ingredient{生肥肉}{一两}
+\ingredient{火腿}{一两}
+\ingredient{丝瓜}{一根}
+\ingredient{水发冬菇}{五钱}
+\ingredient{鸡蛋}{二个}
+\ingredient{水豆粉}{三钱}
+\ingredient{盐}{四分}
+\ingredient{特级清汤}{一斤半}
+\ingredient{味精}{二分}
 
 \preparation
 
