--- a/latex/recipe-019.tex
+++ b/latex/recipe-019.tex
@@ -126,7 +126,7 @@
 的小块（俗称如意蛋卷）（如图\,\ref{fig:egg-roll}\,丙）。
 
 \step 用平底大碗一个，先将汆好的笋条、响皮摆在碗底；次将酥肉逐片摆成圆形，为第
-二层；又将尖刀圆子十六条分为每方四条摆成卍字形，为第三层；再将猪心、猪舌象铺瓦
+二层；又将尖刀圆子十六条分为每方四条摆成卍字形，为第三层；再将猪心、猪舌像铺瓦
 一样分别各摆半个碗，成圆形，为第四层；最后将蛋卷用刀平铲放于上面。再用火腿，把
 特级奶汤、味精、料酒灌入摆好的杂烩碗内，入笼蒸二小时取出。再用特级奶汤十两，加
 味精、盐，舀入杂烩内。另选绿色鲜菜一束，淘洗烫熟，放入碗内以衬其色即成。
