--- a/latex/recipe-099.tex
+++ b/latex/recipe-099.tex
@@ -64,7 +64,7 @@
 以尚未成饭、米无硬心为度。莲米（退衣去心）、苡仁和芡实淘洗后用开水泡胀，装在碗
 内，加清水泡浸，上笼蒸𤆵。金钩用沸汤泡胀，与香菌、火腿切成如豌豆大小的丁，然后
 将鲜豌豆仁、糯米、莲米、苡仁、芡实、金钩、香菌和火腿加盐拌匀，从鸡颈开口处装入
-腹内，装好后用削细的竹签（约五寸长）象缝衣似的将鸡颈开口处锁住（从外面看如同一
+腹内，装好后用削细的竹签（约五寸长）像缝衣似的将鸡颈开口处锁住（从外面看如同一
 只有骨的鸡），放入沸汤锅中烫一下捞出，将鸡翅翻在背上盘起，鸡头仰翻在翅的下面压
 住，再装入大蒸碗内，鸡背向上，不加水上笼干蒸；蒸约两小时，用竹筷以能将鸡翅戳破
 为适合，然后把它翻入盘内，用干布帕将鸡身的水气沾干，全身抹上酱油；再将鸡蛋加干
