--- a/latex/recipe-155.tex
+++ b/latex/recipe-155.tex
@@ -50,7 +50,7 @@
 
 \step 鲜虾挤成虾肉，淘洗干净；瘦肉砸成肉茸。
 
-\step 口蘑、鲜笋、火腿、鸡皮分别切成象虾仁大小的指甲壳片。
+\step 口蘑、鲜笋、火腿、鸡皮分别切成像虾仁大小的指甲壳片。
 
 \step 虾肉用蛋清豆粉、盐少许拌匀，入猪油锅内用筷子滑散，即用漏瓢打入碗中，以清
 汤过二次，除尽油质。
