--- a/latex/recipe-244.tex
+++ b/latex/recipe-244.tex
@@ -48,7 +48,7 @@
 丝。
 
 \step 将兰片、火腿、鸡丝两头砌齐，用带丝一根从中间缠成一指大的小把三十六把（每
-把包括三种丝子），两头留五分长不缠，象火把状。
+把包括三种丝子），两头留五分长不缠，像火把状。
 
 \step 用蒸碗一个铺上网油，将缠好的把，摆成三叠水在碗内定好，掺少许汤上笼蒸约十
 分钟取出。
