--- a/latex/recipe-116.tex
+++ b/latex/recipe-116.tex
@@ -32,7 +32,7 @@
 \ingredients
 
 \ingredient{肥鸭一只}{三斤}
-\ingredient{糕米}{二两}
+\ingredient{糯米}{二两}
 \ingredient{湘莲子}{一两五}
 \ingredient{芡实}{九钱}
 \ingredient{苡仁}{九钱}
