Fix missing sequence number

--- a/latex/recipe-120.tex
+++ b/latex/recipe-120.tex
@@ -42,9 +42,11 @@
 
 \preparation
 
-\step 扯肚头，泡发竹荪，砸茸子。肚头去皮去油筋，用立刀切、斜刀片，每三刀一断，
-宽四至五分、长一寸二的鱼鳃片；𬂁肝去外皮和底板，切每三刀一断的十字花纹（切深不
-切断），均用冷水漂起；竹荪洗净，切大一字条，沸水汆，冷水漂，用汤过一次。
+\step 扯肚头，泡发竹荪，砸茸子。
+
+\step 肚头去皮去油筋，用立刀切、斜刀片，每三刀一断，宽四至五分、长一寸二的鱼鳃
+片；𬂁肝去外皮和底板，切每三刀一断的十字花纹（切深不切断），均用冷水漂起；竹荪
+洗净，切大一字条，沸水汆，冷水漂，用汤过一次。
 
 \step 切好的肚头、𬂁肝，捞起挤干水份，入碗用沸水冲一次，烫约六分火，捞起挤干，
 盛走菜碗内。
