Remove extra comma

--- a/latex/recipe-088.tex
+++ b/latex/recipe-088.tex
@@ -58,8 +58,8 @@
 片，面上再盖上一层鸡脯，然后将网油裹成八分宽的扁形，照样裹完成鸡卷。
 
 \step 锅在旺火上放下菜油一斤烧至六成热时，将裹好的鸡卷一根一根地放入锅内炸至金
-黄色，捞起放在墩子上切成，斜方块，放入条盘内的一头；再将生菜洗净，挤干水份，拌
-上糖、醋、香油放在鸡卷的另一头；走菜时外配椒盐碟子一个即成。
+黄色，捞起放在墩子上切成斜方块，放入条盘内的一头；再将生菜洗净，挤干水份，拌上
+糖、醋、香油放在鸡卷的另一头；走菜时外配椒盐碟子一个即成。
 
 \features
 
