Add note for XIANG

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -88,6 +88,8 @@
 \recipelist{19,20,56,195,254}所附共十一副插图。《四》本《八》本插图，线条边缘
 参差不齐模糊不清。据《中》本插图重制。
 
+\recipelist{19,22,56,99,155,189,208,244}，“像”。《四》本《八》本作“象”。径改。
+
 \recipelist{21,84,175,227,248}，“棋子块”。《四》本《八》本作“旗子块”。径改。
 
 \recipelist{22,33}，“肉圆”。《四》本《八》本作“肉元”。径改。
