--- a/latex/recipe-131.tex
+++ b/latex/recipe-131.tex
@@ -54,7 +54,7 @@
 半分厚、三分见方的薄片；葱白斜切成六分长的段（也可切成末子）。
 
 \step 豆腐切成一寸半长、一寸宽、五分厚的长方形块，用开水在锅内煮五分钟后把水滗
-去，再加入清汤一斤、盐六分移在微火上焰着待用。
+去，再加入清汤一斤、盐六分移在微火上焅着待用。
 
 \step 锅在旺火上放入猪油，烧至八成热时投入鲫鱼，稍煎至两面均呈浅黄色时，把炒
 锅放斜，将鱼拨在锅边，用原油将剁细的豆瓣炸酥，再将炒锅放正，把鱼拨还原，随即加
