--- a/latex/recipe-133.tex
+++ b/latex/recipe-133.tex
@@ -50,7 +50,7 @@
 \preparation
 
 \step 鲫鱼剖腹、去鳞、挖鳃后，清洗干净，鱼身两面用刀斜划五至六刀，深一分；菜油
-在旺火上烧至八成热，将鱼，煎呈金黄色，捞起待用。
+在旺火上烧至八成热，将鱼煎呈金黄色，捞起待用。
 
 \step 肥瘦肉剁为肉末；芽菜洗净，切成长一寸的段；葱白切成二寸长节节；泡辣椒去
 蒂、去尖、去籽，切成一寸五长的节；姜切成一寸长、二分宽、半分厚的片子。
