--- a/latex/recipe-134.tex
+++ b/latex/recipe-134.tex
@@ -54,8 +54,8 @@
 \step 鱼剖腹、去鳞、挖鳃，清洗干净，抹上料酒、盐，先用网油垫在大蒸碗内将鱼放
 上，网油抄拢，放花椒（数粒）、葱子、姜（拍松），上笼干蒸十五分钟。
 
-\step 芹菜去叶留茎，连同葱子切成细花；大蒜、豆豉分别成细泥；芽菜剁成末；剩余的
-花椒与菜油在锅内制成花椒油。
+\step 芹菜去叶留茎，连同葱子切成细花；大蒜、豆豉分别研成细泥；芽菜剁成末；剩余
+的花椒与菜油在锅内制成花椒油。
 
 \step 油辣椒、豆豉、香油、酱油、蒜泥、芽菜末、葱花、芳菜花、花椒油、味精等在碗
 内兑成调料。
