--- a/latex/recipe-134.tex
+++ b/latex/recipe-134.tex
@@ -57,7 +57,7 @@
 \step 芹菜去叶留茎，连同葱子切成细花；大蒜、豆豉分别研成细泥；芽菜剁成末；剩余
 的花椒与菜油在锅内制成花椒油。
 
-\step 油辣椒、豆豉、香油、酱油、蒜泥、芽菜末、葱花、芳菜花、花椒油、味精等在碗
+\step 油辣椒、豆豉、香油、酱油、蒜泥、芽菜末、葱花、芹菜花、花椒油、味精等在碗
 内兑成调料。
 
 \step 凉粉切成四分见方的颗子，用清水一斤与凉粉一齐下锅水烧开时即将凉粉打起滤
