--- a/latex/recipe-134.tex
+++ b/latex/recipe-134.tex
@@ -60,7 +60,7 @@
 \step 油辣椒、豆豉、香油、酱油、蒜泥、芽菜末、葱花、芹菜花、花椒油、味精等在碗
 内兑成调料。
 
-\step 凉粉切成四分见方的颗子，用清水一斤与凉粉一齐下锅水烧开时即将凉粉打起滤
+\step 凉粉切成四分见方的颗子，用清水一斤与凉粉一齐下锅，水烧开时即将凉粉打起滤
 干，倒在调料碗内合转。
 
 \step 将笼内蒸好的鱼取出，揭去网油，拈在盘内摆好，将合好的凉粉倒在鱼上即成。
