--- a/latex/recipe-135.tex
+++ b/latex/recipe-135.tex
@@ -46,7 +46,7 @@
 \preparation
 
 \step 鲜鱼剖腹、去鳞、挖鳃、去牙骨，清洗干净，宰成斧头块，用盐、料酒、酱油、姜
-片、葱段将鱼浸渍十五分钟取组。
+片、葱段将鱼浸渍十五分钟取出。
 
 \step 菜油在旺火上烧红，将鱼炸至金黄色捞起。锅内留油一两五，先将葱、姜煵变色，
 出味后铲去，加料酒、酱油、白糖、清汤搅匀成汁，移中火上，将鱼放入，至滋汁收干，
